--- a/style.css
+++ b/style.css
@@ -967,3 +967,15 @@ textarea {
 	margin-right: auto;
 	margin-bottom: 1.5em;
 }
+
+.my-element {
+	background: green;
+	display: inline-block;
+	margin-bottom: 30rem;
+}
+
+.my-element-2 {
+	background: blue;
+	margin: 0 auto;
+	width: 25%;
+}
