--- a/stylesheets/custom-style.css
+++ b/stylesheets/custom-style.css
@@ -1,11 +1,15 @@
+
+/* ------ GSAP TESTS -------- */
+/* Styles gsap test blocks on Home page */
 .my-element {
-	background: pink;
+	font-size: 2rem;
+	margin: 0;
+	background: lightseagreen;
 	display: inline-block;
-	margin-bottom: 30rem;
 }
 
 .my-element-2 {
 	background: blue;
-	margin: 0 auto;
+	margin: 0;
 	width: 25%;
 }
