--- a/style.css
+++ b/style.css
@@ -698,12 +698,12 @@ textarea {
 }
 
 /* Small menu. */
-.menu-toggle,
+/* .menu-toggle,
 .main-navigation.toggled ul {
 	display: block;
-}
+} */
 
-@media screen and (min-width: 37.5em) {
+/* @media screen and (min-width: 37.5em) {
 
 	.menu-toggle {
 		display: none;
@@ -712,7 +712,7 @@ textarea {
 	.main-navigation ul {
 		display: flex;
 	}
-}
+} */
 
 .site-main .comment-navigation,
 .site-main
