--- a/stylesheets/custom-style.css
+++ b/stylesheets/custom-style.css
@@ -219,14 +219,12 @@ h1.entry-title {
 	top: 100%;
 	right: 0;
 	left: auto;
-	/* opacity: 0%; */
 	transition: all 400ms ease-out;
 }
 
 /* Copied from style.css - Small menu, screen width < 37.5em */
 .main-navigation.toggled ul {
 	visibility: visible;
-	/* opacity: 100%; */
 	height: auto;
 	top: 110%;
 	border-radius: 0 0 1rem 1rem;
@@ -258,11 +256,14 @@ h1.entry-title {
 	background-color: var(--colours-primary);
 	border-radius: 50rem;
 	padding: 0.5rem 1rem;
+	transform: translateY(-1rem);
+	transition: transform 400ms ease-out;
 }
 
 /* Transition animate visibility - options were still showing when bg was animating, controlled with toggle in navigation.js */
 .main-navigation ul li.show-fade-in {
 	visibility: visible;
+	transform: translateX(0);
 }
 
 .main-navigation ul a {
