Corrected theme name in CSS files to 'Lambda Theme' Added free file sync files to gitignore

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: ADHD at Uni
+Theme Name: Lambda Theme
 Theme URI: http://underscores.me/
 Author: Anna Fulcher
 Author URI: http://underscores.me/
