--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: ADHD at Uni
+Theme Name: Lambda Theme
 Theme URI: https://underscores.me/
 Author: Automattic
 Author URI: https://automattic.com/
