--- a/stylesheets/custom-style.css
+++ b/stylesheets/custom-style.css
@@ -364,6 +364,31 @@ h1.entry-title {
 /*========================================*/
 
 /*-------------------------------*/
+/*	Tablet          			 */
+/*-------------------------------*/
+
+@media screen and (min-width: 800px) {
+
+	/*-------- Main Header --------*/
+
+	.main-navigation ul {
+		flex-flow: row wrap;
+		justify-content: flex-end;
+	}
+	
+	/*-------- Main Footer --------*/
+	.site-footer .footer-divider {
+	width: 100%;
+	height: 4rem;
+}
+	.site-footer .copyright {
+		text-align: right;
+	}
+
+	
+}
+
+/*-------------------------------*/
 /*	Desktop          			 */
 /*-------------------------------*/
 @media screen and (min-width: 1280px){
