Added general 'page' template - inserts page intro (from ACF wysiwyg) before content, wrapped in section with lead-text class. Centered entry/page h1 titles.

--- a/stylesheets/custom-style.css
+++ b/stylesheets/custom-style.css
@@ -126,6 +126,11 @@ p {
 
 h1.entry-title {
 	text-align: center;
+	padding-top: 2rem;
+}
+
+.page-intro {
+	text-align: center;
 }
 
 
@@ -393,7 +398,6 @@ h1.entry-title {
 	p {
 		max-width: calc((8/12)*100vw);
 	}
-
 
 }
 
